--- a/src/pages/details/MovieDetails.css
+++ b/src/pages/details/MovieDetails.css
@@ -12,27 +12,57 @@
     padding: 1.5rem;
     margin-top: 2rem;
     color: #fff;
-    display: flex !important;
-    flex-direction: row;
-    justify-content:left;
     background-color: rgba(000, 000, 000, 0.8);
+    display: flex !important;
+    flex-wrap: wrap !important;
+    flex-direction: row !important;
 }
 
 .details-poster{
-    min-width: 45%;
+    width: 45%;
 }
 
 .details-info{
    padding: 1.5em;
+   width: 55%;
 }
 
 .poster{
     position: relative;
-    max-height: 70vh;
+    max-height: 75vh;
+    width: 100%;
 }
 
 .MuiRating-iconEmpty{
    color: #FAAF00 !important; 
+}
+
+.youtube{
+    display: block;
+    width:100%;
+    height: 340px;
+}
+
+
+
+@media (max-width: 1200px) {
+    .details-container{
+        flex-direction: column !important;
+    }
+    .details-poster{
+        width: 100%;  
+        text-align: center;
+    }
+    .poster{
+        width:80%;
+    }
+    .details-info{
+        width: 100%;
+    }
+
+    .youtube{
+        width: 100%;
+    }
 }
 
 
