--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 body{
     background-color: #000;
 }
+
+.app{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
