--- a/src/pages/details/MovieDetails.css
+++ b/src/pages/details/MovieDetails.css
@@ -1,4 +1,7 @@
 .details-box{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     position: relative;
     width: 100%;
     height: 100vh;
